Implementare nice score bonus