@@ -1,12 +1,15 @@
 package entities;
 
+import enums.CityStrategyEnum;
 import input.ChangeInputData;
 import input.ChildInputData;
+import input.GiftInputData;
 
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * A class which represents an annual change to be applied on our database.
@@ -29,13 +32,13 @@ public class Change {
     /**
      * the list of new gifts which need to be added in the database.
      */
-    private final List<Gift> newGifts;
+    private final Map<Gift, Integer> newGifts;
 
     /**
      * A getter for the list of new gifts field
      * @return a new collection of gifts to be added in the database.
      */
-    public List<Gift> getNewGifts() {
+    public Map<Gift, Integer> getNewGifts() {
         return newGifts;
     }
 
@@ -67,22 +70,43 @@ public class Change {
     }
 
     /**
+     * The strategy to use for this year
+     */
+    private final CityStrategyEnum strategy;
+
+    /**
+     * A getter for the strategy field
+     * @return the used strategy
+     */
+    public CityStrategyEnum getStrategy() {
+        return strategy;
+    }
+
+    /**
      * A constructor for the current class, which creates a new instance of the class
      * based on the input data (an instance of ChangeInputData class).
-     * @param change
+     * @param change the change input data to be applied
      */
     public Change(final ChangeInputData change) {
         this.newBudget = change.getNewBudget();
-        this.newGifts = new ArrayList<>(change.getNewGifts().stream().map(Gift::new).toList());
+
+        this.newGifts = new LinkedHashMap<>();
+
+        for (GiftInputData gift : change.getNewGifts()) {
+            this.newGifts.put(new Gift(gift), gift.getQuantity());
+        }
 
         // creating a map from the ChildInputData list existing in the input.
         this.newChildren = new LinkedHashMap<>();
         for (ChildInputData input : change.getNewChildren()) {
             // populating the map.
-            this.newChildren.put(input.getId(), new Child(input));
+            this.newChildren.put(input.getId(), new Child.ChildBuilder(input).
+                    niceScoreBonus(input.getNiceScoreBonus()).build());
         }
 
         this.updates = new ArrayList<>(change.getUpdates().stream().
-                map(ChildUpdate::new).toList());
+                map(ChildUpdate::new).collect(Collectors.toList()));
+
+        this.strategy = change.getStrategy();
     }
 }
